# mltraq

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.txt  mkdocs.yml  pyproject.toml  spellchecker.whitelist
.github/ISSUE_TEMPLATE/: bug_report.md
mkdocs/: cite.md  faq.md  index.md  license.md  mymacros.py  sponsor.md
mkdocs/advanced/: computation-model.md  datastore.md  datastream.md  handover.md  options.md  state.md  storage.md  sysmon.md
mkdocs/advanced/examples/: datastore-01.py  datastore-01.py.out  datastore-01.py.src  datastore-02.py  datastore-02.py.out  datastore-02.py.src  datastream-01.py  datastream-01.py.out  datastream-01.py.src  datastream-02.py  datastream-02.py.out  options-01.py  options-01.py.out  options-02.py.out  options-02.py.src  options-03.py  options-03.py.out  pickling-01.py.out  pickling-01.py.src  runs-01.py  runs-01.py.out  runs-01.py.src  storage-01.py  storage-01.py.out  storage-01.py.src  storage-02.py.out  storage-02.py.src  storage-03.py  storage-03.py.out  storage-03.py.src  storage-04.py  storage-04.py.out  storage-04.py.src  storage-05.py  storage-05.py.out  storage-06.py  storage-06.py.out  storage-06.py.src  sysmon-01.py  sysmon-01.py.out  (+1 more)
mkdocs/benchmarks/: speed.md
mkdocs/blog/: .authors.yml
mkdocs/examples/: 000.py  000.py.out  000.py.src  001.py  001.py.out  001.py.src  002.py  002.py.out  002.py.src
mkdocs/howto/: 01-tracking.md  02-artifacts-storage.md
mkdocs/howto/examples/: 01-tracking-01.py  01-tracking-01.py.out  01-tracking-01.py.src  02-artifacts-storage-01.py  02-artifacts-storage-01.py.out  02-artifacts-storage-01.py.src
mkdocs/tutorial/: 01-sessions.md  02-experiments.md  03-parameters.md  04-storage.md  05-ml.md  add-experiment.md  basic-tracking.md  create-session.md  index.md  managed-experiments.md  reloading-experiments.md
mkdocs/tutorial/examples/: 01-experiments-01.py.out  01-experiments-01.py.src  01-experiments-02.py.out  01-experiments-02.py.src  01-experiments-03.py  01-experiments-03.py.out  01-experiments-03.py.src  01-sessions-01.py.out  01-sessions-01.py.src  03-parameters-01.py  03-parameters-01.py.out  03-parameters-01.py.src  04-storage-01.py  04-storage-01.py.out  04-storage-01.py.src  05-ml-01.py  05-ml-01.py.out  05-ml-01.py.src  add-experiment-001.py.out  add-experiment-001.py.src  add-experiment-002.py  add-experiment-002.py.out  add-experiment-002.py.src  create-session-001.py.out  create-session-001.py.src  persist-experiment-001.py  persist-experiment-002.py  (+9 more)
notebooks/: 01 Experiment.ipynb  02 Parameters.ipynb  03 Iris classification.ipynb  04 serialization speed.ipynb  05 serialization speed - numpy.ipynb  06 Tracking speed - Benchmarking mltraq vs mlflow.ipynb  06 tracking speed - mlflow vs mltraq.ipynb  07 Tracking speed - Benchmarks rev1.ipynb  07 Tracking speed - Benchmarks.ipynb  08 Tracking speed - Benchmarks 2.ipynb  09 Tracking speed - Benchmarks 3.ipynb  11 Tracking speed - Benchmarks 4.ipynb
notebooks/10 Iris with code/: create.ipynb  iris.py  load.ipynb
src/mltraq/: __init__.py  cli.py  experiment.py  job.py  options.py  opts.py  run.py  runs.py  session.py
tests/: test_cli.py  test_code_quality.py  test_exceptions.py  test_experiment.py  test_job.py  test_mkdocs.py  test_options.py  test_run.py  test_session.py
tests/extras/: test_dask.py  test_environment.py  test_step_code.py
tests/quality/: test_code_quality.py  test_comments.py  test_mkdocs.py  test_spellchecker.py
tests/steps/: test_codelog.py  test_drop_fields.py  test_init_fields.py  test_init_sequences.py  test_nothing.py
tests/storage/: test_archivestore.py  test_database.py  test_datastore.py  test_datastream.py  test_serialization.py
tests/utils/: test_base_options.py  test_bunch.py  test_dicts.py  test_exceptions.py  test_fs.py  test_json.py  test_log.py  test_plot.py  test_plotting.py  test_reproducibility.py  test_sequence.py  test_stringify.py  test_sysenv.py  test_sysmon.py  test_text.py  test_web.py
utils/: build_badges.py  build_docs.py  build_docs.sh  build_notebooks.py  build_package.py  build_wordlist.py  common.py  grepkill.sh  svgfixer.py  test.sh  test_coverage.py
(+101 files in other folders)
