[tool.poetry]
name = "mltraq"
version = "0.0.127"
description = "Track and Collaborate on AI Experiments."
authors = ["Michele Dallachiesa <michele.dallachiesa@sigforge.com>"]
license = "BSD-3"
readme = "README.md"
homepage = "https://mltraq.com/"
repository = "https://github.com/elehcimd/mltraq"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved",
    "Intended Audience :: Science/Research",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
mltraq = "mltraq.cli:main"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13.0"
pandas = ">=1.5.3"
pyarrow = ">=10.0.0"
joblib = ">=1.3.2"
sqlalchemy = ">=2.0.0" 
cloudpickle = ">=2.2.0"
tqdm = ">=4.64.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"
ipywidgets = "^8.0.2"
pytest = ">=7.2.0"
black = {extras = ["jupyter"], version = ">=22.10.0"}
ruff = ">=0.0.128"
pytest-cov = ">=4.0.0"
pylint = ">=2.15.9"
pytest-xdist = ">=3.1.0"
mkdocs-material = ">=8.5.11"
mdx-include = ">=1.4.2"
mkdocs-macros-plugin = ">=0.7.0"
mkdocstrings = {extras = ["python"], version = ">=0.19.1"}
matplotlib = ">=3.6.2"
anybadge = ">=1.14.0"
certifi = ">=2022.12.7"
pyspellchecker = "^0.8.1"
mypy = "^1.8.0"
pandas-stubs = "^2.1.4.231227"
pyinstrument = "^4.6.2"
mkdocs-charts-plugin = "^0.0.10"
scikit-learn = "^1.4.0"
psycopg2-binary = "^2.9.9"
# asciinema = "^2.4.0"
# mlflow = "^2.10.2"
# aim = "^3.18.1"
# neptune = "^1.9.1"
# comet-ml = "^3.38.0"
# wandb = "^0.16.3"
# fasttrackml = "0.5.0b2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py37"]
preview = true

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "U", "S", "C", "B", "A", "T", "Q", "BLE", "C", "ERA"] # ANN FBT
target-version = "py37"
lint.ignore = ["A003", "S101", "T201", "T203"]
extend-include = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
